--- a/nsolar/nsolar/nsolar.csproj
+++ b/nsolar/nsolar/nsolar.csproj
@@ -39,6 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
+    <Compile Include="Solar.cs" />
+    <Compile Include="Time.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
